--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@trpc/next": "^9.27.2",
     "@trpc/react": "^9.27.2",
     "@trpc/server": "^9.27.2",
+    "daisyui": "^2.31.0",
     "next": "12.3.1",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
+    "react-daisyui": "^2.4.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.36.0",
     "react-query": "^3.39.2",
     "superjson": "^1.10.0",
     "zod": "^3.18.0"
